--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.krist.geosnap">
+    package="com.kristomb.geosnap">
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
@@ -15,7 +15,12 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Activities.Inbox">
+        <meta-data
+            android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/facebook_app_id" />
+
+        <!--<activity android:name=".Activities.Inbox">-->
+        <activity android:name=".Activities.LoginScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -41,7 +46,14 @@
             android:label="@string/title_activity_img_viewer"
             android:theme="@style/FullscreenTheme" />
         <activity android:name=".Activities.ImgUploader" />
-        <activity android:name=".Activities.UserSettings"></activity>
+        <activity android:name=".Activities.UserSettings" />
+        <!--<activity android:name=".Activities.LoginScreen"></activity>-->
+        <activity android:name=".Activities.Inbox"></activity>
+        <activity android:name="com.facebook.FacebookActivity"
+            android:configChanges=
+                "keyboard|keyboardHidden|screenLayout|screenSize|orientation"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar"
+            android:label="@string/app_name" />
     </application>
 
 </manifest>
