--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,8 +19,8 @@
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_app_id" />
 
-        <!--<activity android:name=".Activities.Inbox">-->
-        <activity android:name=".Activities.LoginScreen">
+        <activity android:name=".Activities.Inbox">
+        <!--<activity android:name=".Activities.LoginScreen">-->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -47,8 +47,8 @@
             android:theme="@style/FullscreenTheme" />
         <activity android:name=".Activities.ImgUploader" />
         <activity android:name=".Activities.UserSettings" />
-        <!--<activity android:name=".Activities.LoginScreen"></activity>-->
-        <activity android:name=".Activities.Inbox"></activity>
+        <activity android:name=".Activities.LoginScreen"></activity>
+        <!--<activity android:name=".Activities.Inbox"></activity>-->
         <activity android:name="com.facebook.FacebookActivity"
             android:configChanges=
                 "keyboard|keyboardHidden|screenLayout|screenSize|orientation"
