--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,6 @@
             android:value="@string/facebook_app_id" />
 
         <activity android:name=".Activities.Inbox">
-        <!--<activity android:name=".Activities.LoginScreen">-->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -43,12 +42,15 @@
 
         <activity
             android:name=".Activities.ImgViewer"
+            android:screenOrientation="portrait"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/title_activity_img_viewer"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
-        <activity android:name=".Activities.ImgUploader" />
-        <activity android:name=".Activities.UserSettings" />
-        <activity android:name=".Activities.LoginScreen"></activity>
+        <activity
+            android:name=".Activities.ImgUploader"
+            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".Activities.UserSettings" />
         <!--<activity android:name=".Activities.Inbox"></activity>-->
         <activity android:name="com.facebook.FacebookActivity"
             android:configChanges=
